--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1>My Tournament Site</h1>
-            <img src="assets/images/logo.png" alt="Site Logo" class="logo">
+            <img src="project-root/public/images/logo.webp" alt="Site Logo" class="logo">
         </header>
 
         <!-- Button to Show the Form -->
