--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>My Tournament Site</h1>
+            <h1>Build Your Tournament Here</h1>
             <img src="assets/images/logo.png" alt="Site Logo" class="logo">
         </header>
 
